--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>Paraná Games</title>
 </head>
 <body>
-<p></p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!
+<p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</p>
 </body>
 </html>
