--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Paraná Games</title>
 </head>
-<body>Paraná Games
+<body><h1>Paraná Games</h1>
 <p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</p>
 </body>
 </html>
