--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title>Paraná Games</title>
 </head>
-<body><h1><center>color= red;Paraná Games</center></h1></color>
+<body><h1><center>Paraná Games</center></h1></color>
 <center>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</center>
 </body>
 </html>
