--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 <head>
-<link rel="stylesheet" href="style.css">
+<canvas style="color:gray"></canvas>
 <meta charset="utf-8">
 <title>Paraná Games</title>
 </head>
