--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <meta charset="utf-8">
 <title>Paraná Games</title>
 </head>
-<body><h1 style="color:red"><center>Paraná Games</center></h1>
+<body>{
+background-color: linen;
+}
+<h1 style="color:red"><center>Paraná Games</center></h1>
 <center>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</center>
 </body>
 </html>
