--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 <head>
+<style>
+body{
+background-color: gray;
+}
+</style>
 <meta charset="utf-8">
 <title>Paraná Games</title>
 </head>
-<body>{
-background-color: linen;
-}
+<body>
 <h1 style="color:red"><center>Paraná Games</center></h1>
 <center>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</center>
 </body>
