--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="pt-br" dir="ltr">
 <head>
 <style>
-body{
-background-color: gray;
-}
+    body{
+    background-color: gray;
+    }
 </style>
 <meta charset="utf-8">
-<title>Paraná Games</title>
+<title>
+     Paraná Games 
+</title>
 </head>
 <body>
-<h1 style="color:red"><center>Paraná Games</center></h1>
-<center>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</center>
+    <h1 style="color:red; background-color: forestgreen;"><center>Paraná Games</center></h1>
+    <center>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</center>
 </body>
 </html>
