--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
     body{
-    background-color: aquamarine;
+    background-color: goldenrod;
     }
 </style>
 <meta charset="utf-8">
