--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <h1 
-    style="color:red; background-color: forestgreen; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><center>Paraná Games</center>
+    style="color:red; background-color: blueviolet; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><center>Paraná Games</center>
 </h1>
-<center style="color:yellow ;">
+<center style="color:crimson ;">
     Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!
 </center>
 </body>
