--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 <head>
-<style>
-    body{
-    background-color: goldenrod;
-    }
-</style>
 <meta charset="utf-8">
 <title>
      Paraná Games 
 </title>
 </head>
 <body>
-<h1 
-    style="color:red; background-color: gray; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><center>Paraná Games</center>
+<h1>
+<center>Paraná Games</center>
 </h1>
-<center style="color:green;">
+<center>
     Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!
 </center>
 </body>
