--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </title>
 </head>
 <body>
+     <img id="dice" src="dice-2031512_1920.jpg">
     <img src="dice-2031512_1920.jpg">
 <h1>
 <center>Paraná Games</center>
