--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
      <img id="dice" src="dice-2031512_1920.jpg">
-    <img src="dice-2031512_1920.jpg">
+    src="dice-2031512_1920.jpg">
 <h1>
 <center>Paraná Games</center>
 </h1>
