--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 </h1>
 <img id="dice" src="dice-2031512_1920.jpg">
 <p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</p>
+<a href="produtos.html">Produtos</a>
 </body>
 </html>
