--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </title>
 </head>
 <body>
+<header>
+     <div class="caixa">
+          <nav>
+               <ul>
+                <lin><a href="index.html">Home</a></lin>
+                <lin><a href="produtos.html">Produtos</a></lin>
+               </ul>
+          </nav>
+     </div>
+</header>
 <h1>
 <center>Paraná Games</center>
 </h1>
