--- a/produtos.html
+++ b/produtos.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="caixa">
+             <nav>
+                  <ul>
+                   <lin><a href="index.html">Home</a></lin>
+                   <lin><a href="produtos.html">Produtos</a></lin>
+                  </ul>
+             </nav>
+        </div>
+   </header>
     Dado de jogos
 </body>
 </html>
