--- a/produtos.html
+++ b/produtos.html
@@ -7,7 +7,7 @@
     <title>Produtos</title>
 </head>
 <body>
-    <h1>Paraná Games</h1>
+    <title>Paraná Games</title>
 
     Dado de jogos
 </body>
