--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
 
 
-<img id="dice" src="dice-2031512_1920.jpg">
+<img id="dice" src="dice-gf8280f25b_1280-removebg-preview.png">
 </body>
 </html>
