--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais! Segue o link para ver nossos produtos</p>
 
 
-
+<img id="logo" src="Paraná_Games-removebg-preview.png">
 
 
 <img id="dice" src="dice-gf8280f25b_1280-removebg-preview.png">
