--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      </div>
 </header>
 
-<h1><center>Paraná Games</center></h1>
+<img id="logo" src="Paraná_Games-removebg-preview.png"> <h1><center>Paraná Games</center></h1>
 
 <p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais! Segue o link para ver nossos produtos</p>
 
