--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </title>
 </head>
 <body>
+     <img id="logo" src="Paraná_Games-removebg-preview.png">
 <header>
      <div class="caixa">
           <nav>
