--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
 <img id="logo" src="Paraná_Games__1_-removebg-preview.png">
 
-<p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais! Segue o link para ver nossos produtos</p>
+<p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</p>
 
 
 
