--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
 
 
-<img id="dice" src="dice-gf8280f25b_1280-removebg-preview.png">
+<img id="dice" src="dice-gf8280f25b_1280-removebg-preview.png">    A Paraná Games foi sempre conhecida por conter uma variedade de jogos de tabuleiro! 
 </body>
 </html>
