--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</p>
 
 
-<p>A Paraná Games foi sempre conhecida por conter uma variedade de jogos de tabuleiro!</p><img id="dice" src="dice-gf8280f25b_1280-removebg-preview.png">   
+<img id="dice" src="dice-gf8280f25b_1280-removebg-preview.png"><p>A Paraná Games foi sempre conhecida por conter uma variedade de jogos de tabuleiro!</p>   
 
 </body>
 </html>
