--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</p>
 
 
-<img id="dice" src="Conhecida_pela_sua_variedade_de_jogos_de_tabuleiro__a_Paraná_Games_sempre_é_a_melhor_do_ramo___1_-removebg-preview.png">            <h1>Paraná Games foi sempre conhecida por conter uma variedade de jogos de tabuleiro!</h1>                                                                     
+<img id="dice" src="Conhecida_pela_sua_variedade_de_jogos_de_tabuleiro__a_Paraná_Games_sempre_é_a_melhor_do_ramo___1_-removebg-preview.png">            <h1>Paraná Games foi sempre conhecida por conter uma variedade de jogos de tabuleiro!</h1>                                                       <h1>Paraná Games foi sempre conhecida por conter uma variedade de jogos de tabuleiro!</h1>              
 <h1>Paraná Games foi sempre conhecida por conter uma variedade de jogos de tabuleiro!</h1>
 
 </body>
