--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </title>
 </head>
 <body>
-<header>
-     <div class="caixa">
-          <nav>
-               <ul>
-                <lin><a href="index.html">Home</a></lin>
-                <lin><a href="produtos.html">Produtos</a></lin>
-               </ul>
-          </nav>
-     </div>
-</header>
+
+     <div class="menu">
+          <img id="logo" src="logo seed.png" alt="Logo SEED">
+            <nav>
+              <ul>
+               <li><a href="index.html"> Inicial</a></li>
+               <li><a href="historia.html">Sobre o Grupo</a></li>
+               <li><a href="https://www.google.com.br/">Mais informações </a></li>
+              </ul>
+            </nav>
+          </div>
+       </header>
+       
 
 <img id="logo" src="Paraná_Games__2_-removebg-preview.png">
 
