--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        </header>
        
 
-<img id="logo" src="Design sem nome.png">
+<img id="logo" src="Paraná_Games__2_-removebg-preview.png">
 
 <p>Fundada em 1999, a Paraná Games foi criada com o intuíto de proporcionar diversão a nerds de todo o Paraná, com venda de livros, jogos e tudo mais!</p>
 
