--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </title>
 </head>
 <body>
-
+</header>
      <div class="menu">
-          <img id="logo" src="logo seed.png" alt="Logo SEED">
             <nav>
               <ul>
                <li><a href="index.html"> Inicial</a></li>
